style: fix code block cutting off

--- a/assets/style.css
+++ b/assets/style.css
@@ -25,3 +25,6 @@ nav li::after {
 nav li:last-child::after {
     content: "";
 }
+code {
+    padding: 0px;
+}
